# Ray_tracing_cuda

./: README.md  plot.py  res.csv
CPU_version/: CMakeLists.txt
CPU_version/src/: mat_types.c  mat_types.h  ray_tracing.c  ray_tracing.c~  tick.c  tick.h  vec.c  vec.c~  vec.h  vec.h~
GPU_version/src/: Makefile  d_mat_types.cu  d_mat_types.h  plot.py  ray.cu  run_ray_trace.sbatch  vec.cu  vec.h
GPU_version/src3/: ray.cu
res/: plot.py  plot1.py  res1.csv
